logs/ckanext-datastore-ts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/controller'...
Compiling './lib/python3.5/site-packages/ckanext/datastore_ts/db.py'...
***   File "./lib/python3.5/site-packages/ckanext/datastore_ts/db.py", line 164
    except ProgrammingError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/datastore_ts/examples'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/fanstatic'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/logic'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/templates'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/templates/package'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/templates/package/snippets'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/templates/snippets'...
Listing './lib/python3.5/site-packages/ckanext/datastore_ts/tests'...
Listing './lib/python3.5/site-packages/ckanext_datastore_ts-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
